--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyNAAEi04g/2AzXfE1tHLSMX",
+      "authorship_tag": "ABX9TyPnre3QARPeyozlq6GLiJE9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -313,14 +313,15 @@
       "source": [
         "import re\n",
         "\n",
-        "def find_mul_and_eval(split):\n",
-        "  matches = re.findall(\"mul\\((\\d+),(\\d+)\\)\", split)\n",
+        "def find_mul_and_eval(instructions):\n",
+        "  # regex mul\\((\\d+),(\\d+)\\)\n",
+        "  matches = re.findall(\"mul\\((\\d+),(\\d+)\\)\", instructions)\n",
         "  return sum([int(x) * int(y) for (x, y) in matches])"
       ],
       "metadata": {
         "id": "Vhwgw70512ue"
       },
-      "execution_count": 101,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -334,9 +335,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9e6253ee-910f-4e36-9ca6-3561bf6ae84f"
+        "outputId": "ba899854-7ec7-4262-cfe3-b8da56537686"
       },
-      "execution_count": 102,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +347,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 102
+          "execution_count": 107
         }
       ]
     },
@@ -363,6 +364,7 @@
       "cell_type": "code",
       "source": [
         "import re\n",
+        "from functools import reduce\n",
         "\n",
         "def next_state(state, split):\n",
         "  (sum, is_active) = state\n",
@@ -375,6 +377,7 @@
         "      return (sum + (find_mul_and_eval(split) if is_active else 0), is_active)\n",
         "\n",
         "# input = \"xmul(2,4)&mul[3,7]!^don't()_mul(5,5)+mul(32,64](mul(11,8)undo()?mul(8,5))\"\n",
+        "# split on (do\\(\\)|don't\\(\\)) - capturing group leads to delimiters being included in result\n",
         "reduce(next_state, re.split(\"(do\\(\\)|don't\\(\\))\", input), (0, True))[0]"
       ],
       "metadata": {
@@ -382,9 +385,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IloCNlgql80L",
-        "outputId": "01db97bd-49b3-4a61-ece7-0a3d88ed9864"
+        "outputId": "e4ef001e-2383-45f7-a70e-a69c6b68093c"
       },
-      "execution_count": 103,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +397,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 103
+          "execution_count": 108
         }
       ]
     }
