regex formatting for GitHub in comments

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyPnre3QARPeyozlq6GLiJE9",
+      "authorship_tag": "ABX9TyPAPugO2qwIyjVx6IL19h5+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -314,7 +314,7 @@
         "import re\n",
         "\n",
         "def find_mul_and_eval(instructions):\n",
-        "  # regex mul\\((\\d+),(\\d+)\\)\n",
+        "  # regex mul\\\\((\\\\d+),(\\\\d+)\\\\)\n",
         "  matches = re.findall(\"mul\\((\\d+),(\\d+)\\)\", instructions)\n",
         "  return sum([int(x) * int(y) for (x, y) in matches])"
       ],
@@ -377,7 +377,7 @@
         "      return (sum + (find_mul_and_eval(split) if is_active else 0), is_active)\n",
         "\n",
         "# input = \"xmul(2,4)&mul[3,7]!^don't()_mul(5,5)+mul(32,64](mul(11,8)undo()?mul(8,5))\"\n",
-        "# split on (do\\(\\)|don't\\(\\)) - capturing group leads to delimiters being included in result\n",
+        "# split on (do\\\\(\\\\)|don't\\\\(\\\\)) - capturing group leads to delimiters being included in result\n",
         "reduce(next_state, re.split(\"(do\\(\\)|don't\\(\\))\", input), (0, True))[0]"
       ],
       "metadata": {
