add day 04, part 1

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyPAPugO2qwIyjVx6IL19h5+",
+      "authorship_tag": "ABX9TyPE29PCmj1pU3qzxq7Xuh6M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -296,7 +296,7 @@
       "metadata": {
         "id": "GFPJR9oEgR9g"
       },
-      "execution_count": 100,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "Vhwgw70512ue"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -337,7 +337,7 @@
         },
         "outputId": "ba899854-7ec7-4262-cfe3-b8da56537686"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +387,7 @@
         "id": "IloCNlgql80L",
         "outputId": "e4ef001e-2383-45f7-a70e-a69c6b68093c"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,6 +400,97 @@
           "execution_count": 108
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 04, input"
+      ],
+      "metadata": {
+        "id": "mC6UgWYuvkn9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "board = [line.strip() for line in open('drive/MyDrive/AoC/2024/input04.txt')]"
+      ],
+      "metadata": {
+        "id": "27Y3thHmvm7E"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 04, part 1, find XMAS"
+      ],
+      "metadata": {
+        "id": "8EXwD1_3cfVI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import reduce\n",
+        "rows = len(board)\n",
+        "cols = len(board[0])\n",
+        "\n",
+        "def in_range(p):\n",
+        "  r, c = p\n",
+        "  return r >= 0 and r < rows and c >= 0 and c < cols\n",
+        "\n",
+        "def check_char(p, char):\n",
+        "  r, c = p\n",
+        "  return in_range(p) and board[r][c] == char\n",
+        "\n",
+        "def check_xmas(p, d):\n",
+        "  def next_state(state, char):\n",
+        "    p, found = state\n",
+        "    r, c = p\n",
+        "    dr, dc = d\n",
+        "    return (r + dr, c + dc), found and check_char(p, char)\n",
+        "\n",
+        "  p, found = reduce(next_state, \"XMAS\", (p, True))\n",
+        "  return found\n",
+        "\n",
+        "deltas = [(dr, dc) for dr in [-1, 0, 1] for dc in [-1, 0, 1] if dr != 0 or dc !=0]\n",
+        "\n",
+        "def check_xmas_all(p):\n",
+        "  return sum([check_xmas(p,d) for d in deltas])\n",
+        "\n",
+        "sum([check_xmas_all((r, c)) for r in range(rows) for c in range(cols)])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w2qf355Rw6lx",
+        "outputId": "01249e10-75eb-4a7f-b944-d58f01c138f6"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2567"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6DwBsLp0UEnw"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
