add day 04, part 2

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyPE29PCmj1pU3qzxq7Xuh6M",
+      "authorship_tag": "ABX9TyMM1hRVCaWX68BtbnoT7KcA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "SKku640EHqzU"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -59,16 +59,16 @@
     {
       "cell_type": "code",
       "source": [
-        "sum([abs(l - r) for (l, r) in zip(sorted([l for (l, _) in input]), sorted([r for (_, r) in input]))])"
+        "sum(abs(l - r) for (l, r) in zip(sorted([l for (l, _) in input]), sorted([r for (_, r) in input])))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "owxfIRB-73TW",
-        "outputId": "7a050ccf-ff1c-48a1-d16e-dc08b6fd82fb"
+        "outputId": "76e13814-9d95-4ec3-a674-be66ab518402"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -78,7 +78,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 45
         }
       ]
     },
@@ -95,17 +95,17 @@
       "cell_type": "code",
       "source": [
         "from collections import Counter\n",
-        "r_counts = Counter([r for (_, r) in input])\n",
-        "sum([l * r_counts[l] for (l, _) in input])"
+        "r_counts = Counter(r for (_, r) in input)\n",
+        "sum(l * r_counts[l] for (l, _) in input)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MTWKPqpv-Olj",
-        "outputId": "ee21c9c6-d7d4-4909-8a89-0a56bf776755"
+        "outputId": "10e5f7d6-6520-454e-a16a-7f9c4510096c"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +115,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 46
         }
       ]
     },
@@ -136,7 +136,7 @@
       "metadata": {
         "id": "XFpAAU_dHRO1"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -156,46 +156,46 @@
       "metadata": {
         "id": "9xFCJ3oVH9nX"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def same_sgn(deltas_line):\n",
-        "  return all([deltas_line[i] * deltas_line[i+1] > 0 for i in range(len(deltas_line)-1)])"
+        "  return all(deltas_line[i] * deltas_line[i+1] > 0 for i in range(len(deltas_line)-1))"
       ],
       "metadata": {
         "id": "di6wBoYIIkvG"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def delta_max(deltas_line, m):\n",
-        "  return all([abs(d) <= m for d in deltas_line])"
+        "  return all(abs(d) <= m for d in deltas_line)"
       ],
       "metadata": {
         "id": "pqb9kf6-I4Rk"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "sum([1 if same_sgn(deltas_line) and delta_max(deltas_line, 3) else 0 for deltas_line in deltas])"
+        "sum(1 if same_sgn(deltas_line) and delta_max(deltas_line, 3) else 0 for deltas_line in deltas)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uChLkyXjJu4Q",
-        "outputId": "1686cbc1-44c3-4abf-e3a7-3bd4e1e0c5a1"
+        "outputId": "e5473d9f-79fa-4085-f393-755738a1a9fb"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 51
         }
       ]
     },
@@ -229,19 +229,19 @@
         "  return [line[:i] + line[i+1:] for i in range(len(line))]\n",
         "\n",
         "# part 1 regression\n",
-        "sum([1 if check_line(line) else 0 for line in input])\n",
+        "sum(1 if check_line(line) else 0 for line in input)\n",
         "\n",
         "# part 2\n",
-        "sum([1 if check_line(line) or any([check_line(r) for r in remove1(line)]) else 0 for line in input])"
+        "sum(1 if check_line(line) or any(check_line(r) for r in remove1(line)) else 0 for line in input)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "F_RiahZiKqp7",
-        "outputId": "dd8d867c-98ac-46ee-f750-898a31000621"
+        "outputId": "f85f1a36-b158-4e9f-f160-42cd876042c0"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,31 +251,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "rqCaAmMaZVeQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6f5a0f82-81e1-4484-b22d-76bf39da6b38"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "datetime.date(5, 12, 30)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
+          "execution_count": 52
         }
       ]
     },
@@ -291,12 +267,12 @@
     {
       "cell_type": "code",
       "source": [
-        "input = \"\".join([line for line in open('drive/MyDrive/AoC/2024/input03.txt')])"
+        "input = \"\".join(line for line in open('drive/MyDrive/AoC/2024/input03.txt'))"
       ],
       "metadata": {
         "id": "GFPJR9oEgR9g"
       },
-      "execution_count": 13,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -316,12 +292,12 @@
         "def find_mul_and_eval(instructions):\n",
         "  # regex mul\\\\((\\\\d+),(\\\\d+)\\\\)\n",
         "  matches = re.findall(\"mul\\((\\d+),(\\d+)\\)\", instructions)\n",
-        "  return sum([int(x) * int(y) for (x, y) in matches])"
+        "  return sum(int(x) * int(y) for (x, y) in matches)"
       ],
       "metadata": {
         "id": "Vhwgw70512ue"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -335,9 +311,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba899854-7ec7-4262-cfe3-b8da56537686"
+        "outputId": "4912fc7b-9237-48f0-e391-2b5c586d7985"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +323,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 107
+          "execution_count": 55
         }
       ]
     },
@@ -385,9 +361,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IloCNlgql80L",
-        "outputId": "e4ef001e-2383-45f7-a70e-a69c6b68093c"
+        "outputId": "b1ec2cae-fbf0-4129-a194-427bf5748709"
       },
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -397,7 +373,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 108
+          "execution_count": 56
         }
       ]
     },
@@ -413,12 +389,14 @@
     {
       "cell_type": "code",
       "source": [
-        "board = [line.strip() for line in open('drive/MyDrive/AoC/2024/input04.txt')]"
+        "board = [line.strip() for line in open('drive/MyDrive/AoC/2024/input04.txt')]\n",
+        "rows = len(board)\n",
+        "cols = len(board[0])"
       ],
       "metadata": {
         "id": "27Y3thHmvm7E"
       },
-      "execution_count": 44,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -434,8 +412,6 @@
       "cell_type": "code",
       "source": [
         "from functools import reduce\n",
-        "rows = len(board)\n",
-        "cols = len(board[0])\n",
         "\n",
         "def in_range(p):\n",
         "  r, c = p\n",
@@ -458,39 +434,89 @@
         "deltas = [(dr, dc) for dr in [-1, 0, 1] for dc in [-1, 0, 1] if dr != 0 or dc !=0]\n",
         "\n",
         "def check_xmas_all(p):\n",
-        "  return sum([check_xmas(p,d) for d in deltas])\n",
+        "  return sum(check_xmas(p,d) for d in deltas)\n",
         "\n",
-        "sum([check_xmas_all((r, c)) for r in range(rows) for c in range(cols)])\n"
+        "sum(check_xmas_all((r, c)) for r in range(rows) for c in range(cols))\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "w2qf355Rw6lx",
-        "outputId": "01249e10-75eb-4a7f-b944-d58f01c138f6"
+        "outputId": "fb4790df-fe69-4804-e489-ad9eef1a0e03"
       },
-      "execution_count": 45,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2567"
+              "18"
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 58
         }
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Day 05, part 2, find\n",
+        "```\n",
+        "M.S\n",
+        ".A.\n",
+        "M.S\n",
+        "```\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "6DwBsLp0UEnw"
+        "id": "9lOrBwM1jbKl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The pattern can only occur in 4 different variants, with 'A' at (0,0)\n",
+        "patterns = [\n",
+        "    {(-1,-1): 'M', (-1,1): 'S', (1,-1): 'M', (1,1): 'S'},\n",
+        "    {(-1,-1): 'M', (-1,1): 'M', (1,-1): 'S', (1,1): 'S'},\n",
+        "    {(-1,-1): 'S', (-1,1): 'M', (1,-1): 'S', (1,1): 'M'},\n",
+        "    {(-1,-1): 'S', (-1,1): 'S', (1,-1): 'M', (1,1): 'M'},\n",
+        "]\n",
+        "\n",
+        "def vec_add(v1, v2):\n",
+        "  return tuple(sum(i) for i in zip(v1, v2))\n",
+        "\n",
+        "def check_pattern(p, pattern):\n",
+        "  return all([check_char(vec_add(p, d), char) for (d, char) in pattern.items()])\n",
+        "\n",
+        "# Search for A within (1,1)...(rows-1, cols-1) and check match for all patterns\n",
+        "\n",
+        "sum(1\n",
+        "    for p in [(r, c) for r in range(1, rows-1) for c in range(1, cols-1) if board[r][c] == 'A']\n",
+        "    for pattern in patterns if check_pattern(p, pattern))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vAxUvNhOjoOZ",
+        "outputId": "4b422849-e5fe-4505-dc90-8cee5df36dac"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2029"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
     }
   ]
 }
