--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyMM1hRVCaWX68BtbnoT7KcA",
+      "authorship_tag": "ABX9TyNFYgHVo5srAKThM46il1MQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,12 +39,12 @@
     {
       "cell_type": "code",
       "source": [
-        "input = [[int(i) for i in line.split()] for line in open('drive/MyDrive/AoC/2024/input01.txt')]"
+        "input01 = [[int(i) for i in line.split()] for line in open('drive/MyDrive/AoC/2024/input01.txt')]"
       ],
       "metadata": {
         "id": "SKku640EHqzU"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,16 +59,16 @@
     {
       "cell_type": "code",
       "source": [
-        "sum(abs(l - r) for (l, r) in zip(sorted([l for (l, _) in input]), sorted([r for (_, r) in input])))"
+        "sum(abs(l - r) for (l, r) in zip(sorted(l for (l, _) in input01), sorted(r for (_, r) in input01)))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "owxfIRB-73TW",
-        "outputId": "76e13814-9d95-4ec3-a674-be66ab518402"
+        "outputId": "f67bdcd9-1067-435c-ac6f-f7543e184870"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -78,7 +78,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 82
         }
       ]
     },
@@ -95,17 +95,17 @@
       "cell_type": "code",
       "source": [
         "from collections import Counter\n",
-        "r_counts = Counter(r for (_, r) in input)\n",
-        "sum(l * r_counts[l] for (l, _) in input)"
+        "r_counts = Counter(r for (_, r) in input01)\n",
+        "sum(l * r_counts[l] for (l, _) in input01)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MTWKPqpv-Olj",
-        "outputId": "10e5f7d6-6520-454e-a16a-7f9c4510096c"
+        "outputId": "1c12a56a-51c2-40a0-9ed1-1283735a67fd"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +115,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 83
         }
       ]
     },
@@ -131,12 +131,12 @@
     {
       "cell_type": "code",
       "source": [
-        "input = [[int(i) for i in line.split()] for line in open('drive/MyDrive/AoC/2024/input02.txt')]"
+        "input02 = [[int(i) for i in line.split()] for line in open('drive/MyDrive/AoC/2024/input02.txt')]"
       ],
       "metadata": {
         "id": "XFpAAU_dHRO1"
       },
-      "execution_count": 47,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -151,12 +151,12 @@
     {
       "cell_type": "code",
       "source": [
-        "deltas = [[line[n+1] - line[n] for n in range(len(line)-1)] for line in input]"
+        "deltas = [[line[n+1] - line[n] for n in range(len(line)-1)] for line in input02]"
       ],
       "metadata": {
         "id": "9xFCJ3oVH9nX"
       },
-      "execution_count": 48,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "di6wBoYIIkvG"
       },
-      "execution_count": 49,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -180,22 +180,22 @@
       "metadata": {
         "id": "pqb9kf6-I4Rk"
       },
-      "execution_count": 50,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "sum(1 if same_sgn(deltas_line) and delta_max(deltas_line, 3) else 0 for deltas_line in deltas)"
+        "sum(1 for deltas_line in deltas if same_sgn(deltas_line) and delta_max(deltas_line, 3))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uChLkyXjJu4Q",
-        "outputId": "e5473d9f-79fa-4085-f393-755738a1a9fb"
+        "outputId": "54d59658-eee7-4add-9eb0-f145a1489a78"
       },
-      "execution_count": 51,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 14
         }
       ]
     },
@@ -229,19 +229,19 @@
         "  return [line[:i] + line[i+1:] for i in range(len(line))]\n",
         "\n",
         "# part 1 regression\n",
-        "sum(1 if check_line(line) else 0 for line in input)\n",
+        "sum(1 if check_line(line) else 0 for line in input02)\n",
         "\n",
         "# part 2\n",
-        "sum(1 if check_line(line) or any(check_line(r) for r in remove1(line)) else 0 for line in input)"
+        "sum(1 for line in input02 if check_line(line) or any(check_line(r) for r in remove1(line)))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "F_RiahZiKqp7",
-        "outputId": "f85f1a36-b158-4e9f-f160-42cd876042c0"
+        "outputId": "9fdbfd01-84c1-427f-9326-5d4dd3b3a051"
       },
-      "execution_count": 52,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,7 +251,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 18
         }
       ]
     },
@@ -267,12 +267,12 @@
     {
       "cell_type": "code",
       "source": [
-        "input = \"\".join(line for line in open('drive/MyDrive/AoC/2024/input03.txt'))"
+        "input03 = \"\".join(line for line in open('drive/MyDrive/AoC/2024/input03.txt'))"
       ],
       "metadata": {
         "id": "GFPJR9oEgR9g"
       },
-      "execution_count": 53,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -297,23 +297,23 @@
       "metadata": {
         "id": "Vhwgw70512ue"
       },
-      "execution_count": 54,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# input = \"xmul(2,4)%&mul[3,7]!@^do_not_mul(5,5)+mul(32,64]then(mul(11,8)mul(8,5))\"\n",
-        "find_mul_and_eval(input)"
+        "# input03 = \"xmul(2,4)%&mul[3,7]!@^do_not_mul(5,5)+mul(32,64]then(mul(11,8)mul(8,5))\"\n",
+        "find_mul_and_eval(input03)"
       ],
       "metadata": {
         "id": "GXsh1v2Mk07N",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4912fc7b-9237-48f0-e391-2b5c586d7985"
+        "outputId": "f8923b12-9871-447d-ddc6-1d53ebcb5738"
       },
-      "execution_count": 55,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +323,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 6
         }
       ]
     },
@@ -343,27 +343,28 @@
         "from functools import reduce\n",
         "\n",
         "def next_state(state, split):\n",
-        "  (sum, is_active) = state\n",
+        "  s, is_active = state\n",
         "  match split:\n",
         "    case \"do()\":\n",
-        "      return (sum, True)\n",
+        "      return (s, True)\n",
         "    case \"don't()\":\n",
-        "      return (sum, False)\n",
+        "      return (s, False)\n",
         "    case _:\n",
-        "      return (sum + (find_mul_and_eval(split) if is_active else 0), is_active)\n",
+        "      return (s + (find_mul_and_eval(split) if is_active else 0), is_active)\n",
         "\n",
-        "# input = \"xmul(2,4)&mul[3,7]!^don't()_mul(5,5)+mul(32,64](mul(11,8)undo()?mul(8,5))\"\n",
+        "# input03 = \"xmul(2,4)&mul[3,7]!^don't()_mul(5,5)+mul(32,64](mul(11,8)undo()?mul(8,5))\"\n",
         "# split on (do\\\\(\\\\)|don't\\\\(\\\\)) - capturing group leads to delimiters being included in result\n",
-        "reduce(next_state, re.split(\"(do\\(\\)|don't\\(\\))\", input), (0, True))[0]"
+        "s, is_active = reduce(next_state, re.split(\"(do\\(\\)|don't\\(\\))\", input03), (0, True))\n",
+        "s"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IloCNlgql80L",
-        "outputId": "b1ec2cae-fbf0-4129-a194-427bf5748709"
+        "outputId": "fe09d019-a5c4-40ed-acff-c8ea7b190042"
       },
-      "execution_count": 56,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -373,7 +374,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 7
         }
       ]
     },
@@ -389,14 +390,14 @@
     {
       "cell_type": "code",
       "source": [
-        "board = [line.strip() for line in open('drive/MyDrive/AoC/2024/input04.txt')]\n",
-        "rows = len(board)\n",
-        "cols = len(board[0])"
+        "input04 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input04.txt')]\n",
+        "rows = len(input04)\n",
+        "cols = len(input04[0])"
       ],
       "metadata": {
         "id": "27Y3thHmvm7E"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -419,7 +420,7 @@
         "\n",
         "def check_char(p, char):\n",
         "  r, c = p\n",
-        "  return in_range(p) and board[r][c] == char\n",
+        "  return in_range(p) and input04[r][c] == char\n",
         "\n",
         "def check_xmas(p, d):\n",
         "  def next_state(state, char):\n",
@@ -443,19 +444,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w2qf355Rw6lx",
-        "outputId": "fb4790df-fe69-4804-e489-ad9eef1a0e03"
+        "outputId": "717ecb8d-f138-4f08-d907-17a552185650"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "18"
+              "2567"
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 105
         }
       ]
     },
@@ -488,13 +489,17 @@
         "def vec_add(v1, v2):\n",
         "  return tuple(sum(i) for i in zip(v1, v2))\n",
         "\n",
+        "# variant without range check\n",
+        "def check_char_unsafe(p, char):\n",
+        "  r, c = p\n",
+        "  return input04[r][c] == char\n",
+        "\n",
         "def check_pattern(p, pattern):\n",
-        "  return all([check_char(vec_add(p, d), char) for (d, char) in pattern.items()])\n",
+        "  return all([check_char_unsafe(vec_add(p, d), char) for (d, char) in pattern.items()])\n",
         "\n",
         "# Search for A within (1,1)...(rows-1, cols-1) and check match for all patterns\n",
-        "\n",
         "sum(1\n",
-        "    for p in [(r, c) for r in range(1, rows-1) for c in range(1, cols-1) if board[r][c] == 'A']\n",
+        "    for p in [(r, c) for r in range(1, rows-1) for c in range(1, cols-1) if input04[r][c] == 'A']\n",
         "    for pattern in patterns if check_pattern(p, pattern))"
       ],
       "metadata": {
@@ -502,9 +507,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vAxUvNhOjoOZ",
-        "outputId": "4b422849-e5fe-4505-dc90-8cee5df36dac"
+        "outputId": "e5b3f100-5406-4b26-822a-b92173cc7d87"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +519,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 108
         }
       ]
     }
