--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyNFYgHVo5srAKThM46il1MQ",
+      "authorship_tag": "ABX9TyM8zAcuUaIPe3RHi1+MPYUT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -136,7 +136,7 @@
       "metadata": {
         "id": "XFpAAU_dHRO1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "9xFCJ3oVH9nX"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "di6wBoYIIkvG"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "pqb9kf6-I4Rk"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
         "id": "uChLkyXjJu4Q",
         "outputId": "54d59658-eee7-4add-9eb0-f145a1489a78"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -229,7 +229,7 @@
         "  return [line[:i] + line[i+1:] for i in range(len(line))]\n",
         "\n",
         "# part 1 regression\n",
-        "sum(1 if check_line(line) else 0 for line in input02)\n",
+        "# print(sum(1 for line in input02 if check_line(line)))\n",
         "\n",
         "# part 2\n",
         "sum(1 for line in input02 if check_line(line) or any(check_line(r) for r in remove1(line)))"
@@ -239,9 +239,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F_RiahZiKqp7",
-        "outputId": "9fdbfd01-84c1-427f-9326-5d4dd3b3a051"
+        "outputId": "37ca3ee7-1553-431c-8055-c90438232e44"
       },
-      "execution_count": 18,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,7 +251,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 39
         }
       ]
     },
@@ -272,7 +272,7 @@
       "metadata": {
         "id": "GFPJR9oEgR9g"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
       "metadata": {
         "id": "Vhwgw70512ue"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -313,7 +313,7 @@
         },
         "outputId": "f8923b12-9871-447d-ddc6-1d53ebcb5738"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +364,7 @@
         "id": "IloCNlgql80L",
         "outputId": "fe09d019-a5c4-40ed-acff-c8ea7b190042"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,8 @@
     {
       "cell_type": "code",
       "source": [
-        "from functools import reduce\n",
+        "def vec_add(v1, v2):\n",
+        "  return tuple(sum(i) for i in zip(v1, v2))\n",
         "\n",
         "def in_range(p):\n",
         "  r, c = p\n",
@@ -422,31 +423,24 @@
         "  r, c = p\n",
         "  return in_range(p) and input04[r][c] == char\n",
         "\n",
-        "def check_xmas(p, d):\n",
-        "  def next_state(state, char):\n",
-        "    p, found = state\n",
-        "    r, c = p\n",
-        "    dr, dc = d\n",
-        "    return (r + dr, c + dc), found and check_char(p, char)\n",
+        "def check(s, p, d):\n",
+        "  return s == \"\" or check_char(p, s[0]) and check(s[1:], vec_add(p, d), d)\n",
         "\n",
-        "  p, found = reduce(next_state, \"XMAS\", (p, True))\n",
-        "  return found\n",
+        "deltas = [(dr, dc) for dr in [-1, 0, 1] for dc in [-1, 0, 1] if dr != 0 or dc != 0]\n",
         "\n",
-        "deltas = [(dr, dc) for dr in [-1, 0, 1] for dc in [-1, 0, 1] if dr != 0 or dc !=0]\n",
+        "def count_xmas(p):\n",
+        "  return sum(1 for d in deltas if check(\"XMAS\", p, d))\n",
         "\n",
-        "def check_xmas_all(p):\n",
-        "  return sum(check_xmas(p,d) for d in deltas)\n",
-        "\n",
-        "sum(check_xmas_all((r, c)) for r in range(rows) for c in range(cols))\n"
+        "sum(count_xmas((r, c)) for r in range(rows) for c in range(cols))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "w2qf355Rw6lx",
-        "outputId": "717ecb8d-f138-4f08-d907-17a552185650"
+        "outputId": "ccbe154f-7302-4bf3-e110-470d42b1e686"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,7 +450,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 105
+          "execution_count": 40
         }
       ]
     },
@@ -480,14 +474,11 @@
       "source": [
         "# The pattern can only occur in 4 different variants, with 'A' at (0,0)\n",
         "patterns = [\n",
-        "    {(-1,-1): 'M', (-1,1): 'S', (1,-1): 'M', (1,1): 'S'},\n",
-        "    {(-1,-1): 'M', (-1,1): 'M', (1,-1): 'S', (1,1): 'S'},\n",
-        "    {(-1,-1): 'S', (-1,1): 'M', (1,-1): 'S', (1,1): 'M'},\n",
-        "    {(-1,-1): 'S', (-1,1): 'S', (1,-1): 'M', (1,1): 'M'},\n",
+        "  (((-1, -1), 'M'), ((-1, 1), 'S'), ((1, -1), 'M'), ((1, 1), 'S')),\n",
+        "  (((-1, -1), 'M'), ((-1, 1), 'M'), ((1, -1), 'S'), ((1, 1), 'S')),\n",
+        "  (((-1, -1), 'S'), ((-1, 1), 'M'), ((1, -1), 'S'), ((1, 1), 'M')),\n",
+        "  (((-1, -1), 'S'), ((-1, 1), 'S'), ((1, -1), 'M'), ((1, 1), 'M'))\n",
         "]\n",
-        "\n",
-        "def vec_add(v1, v2):\n",
-        "  return tuple(sum(i) for i in zip(v1, v2))\n",
         "\n",
         "# variant without range check\n",
         "def check_char_unsafe(p, char):\n",
@@ -495,9 +486,9 @@
         "  return input04[r][c] == char\n",
         "\n",
         "def check_pattern(p, pattern):\n",
-        "  return all([check_char_unsafe(vec_add(p, d), char) for (d, char) in pattern.items()])\n",
+        "  return all(check_char_unsafe(vec_add(p, d), char) for (d, char) in pattern)\n",
         "\n",
-        "# Search for A within (1,1)...(rows-1, cols-1) and check match for all patterns\n",
+        "# Search for A within (1, 1)...(rows-1, cols-1) and check match for all patterns\n",
         "sum(1\n",
         "    for p in [(r, c) for r in range(1, rows-1) for c in range(1, cols-1) if input04[r][c] == 'A']\n",
         "    for pattern in patterns if check_pattern(p, pattern))"
@@ -507,9 +498,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vAxUvNhOjoOZ",
-        "outputId": "e5b3f100-5406-4b26-822a-b92173cc7d87"
+        "outputId": "a18efeaf-b427-4012-82fe-760f03bf11fb"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,9 +510,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 108
+          "execution_count": 37
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "G_ynPO_i05nv"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
