--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyM8zAcuUaIPe3RHi1+MPYUT",
+      "authorship_tag": "ABX9TyPVGv+HIefQWO5w050Pn0vI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,41 +151,23 @@
     {
       "cell_type": "code",
       "source": [
-        "deltas = [[line[n+1] - line[n] for n in range(len(line)-1)] for line in input02]"
-      ],
-      "metadata": {
-        "id": "9xFCJ3oVH9nX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "def same_sgn(deltas_line):\n",
-        "  return all(deltas_line[i] * deltas_line[i+1] > 0 for i in range(len(deltas_line)-1))"
-      ],
-      "metadata": {
-        "id": "di6wBoYIIkvG"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "  return all(deltas_line[i] * deltas_line[i+1] > 0 for i in range(len(deltas_line)-1))\n",
+        "\n",
         "def delta_max(deltas_line, m):\n",
         "  return all(abs(d) <= m for d in deltas_line)"
       ],
       "metadata": {
-        "id": "pqb9kf6-I4Rk"
+        "id": "3scnsnVp6oAB"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "deltas = [[line[n+1] - line[n] for n in range(len(line)-1)] for line in input02]\n",
+        "\n",
         "sum(1 for deltas_line in deltas if same_sgn(deltas_line) and delta_max(deltas_line, 3))"
       ],
       "metadata": {
@@ -193,9 +175,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uChLkyXjJu4Q",
-        "outputId": "54d59658-eee7-4add-9eb0-f145a1489a78"
+        "outputId": "a6a62a75-0464-413c-a8c1-841582827b61"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +187,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 45
         }
       ]
     },
@@ -239,9 +221,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F_RiahZiKqp7",
-        "outputId": "37ca3ee7-1553-431c-8055-c90438232e44"
+        "outputId": "2600fcc5-b2b3-4c57-d77b-0ac98f351d55"
       },
-      "execution_count": 39,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,7 +233,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 46
         }
       ]
     },
@@ -311,9 +293,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f8923b12-9871-447d-ddc6-1d53ebcb5738"
+        "outputId": "efd76bc8-73ae-4a1f-e1a6-bf024245e8fe"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +305,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 43
         }
       ]
     },
@@ -413,8 +395,17 @@
       "cell_type": "code",
       "source": [
         "def vec_add(v1, v2):\n",
-        "  return tuple(sum(i) for i in zip(v1, v2))\n",
-        "\n",
+        "  return tuple(sum(i) for i in zip(v1, v2))"
+      ],
+      "metadata": {
+        "id": "rd_M-0ru6yPa"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def in_range(p):\n",
         "  r, c = p\n",
         "  return r >= 0 and r < rows and c >= 0 and c < cols\n",
@@ -438,9 +429,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w2qf355Rw6lx",
-        "outputId": "ccbe154f-7302-4bf3-e110-470d42b1e686"
+        "outputId": "26d7f73c-ecb0-430e-e898-69c7c65ac5e5"
       },
-      "execution_count": 40,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +441,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 48
         }
       ]
     },
@@ -498,9 +489,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vAxUvNhOjoOZ",
-        "outputId": "a18efeaf-b427-4012-82fe-760f03bf11fb"
+        "outputId": "cc07ac72-1758-44d8-dfd3-e23bf265361e"
       },
-      "execution_count": 37,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +501,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 49
         }
       ]
     },
