--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyPVGv+HIefQWO5w050Pn0vI",
+      "authorship_tag": "ABX9TyMO9tpG/gtHiiUa83wzPRWU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "3scnsnVp6oAB"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
         "id": "uChLkyXjJu4Q",
         "outputId": "a6a62a75-0464-413c-a8c1-841582827b61"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -223,7 +223,7 @@
         "id": "F_RiahZiKqp7",
         "outputId": "2600fcc5-b2b3-4c57-d77b-0ac98f351d55"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +295,7 @@
         },
         "outputId": "efd76bc8-73ae-4a1f-e1a6-bf024245e8fe"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +400,7 @@
       "metadata": {
         "id": "rd_M-0ru6yPa"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -431,7 +431,7 @@
         "id": "w2qf355Rw6lx",
         "outputId": "26d7f73c-ecb0-430e-e898-69c7c65ac5e5"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +491,7 @@
         "id": "vAxUvNhOjoOZ",
         "outputId": "cc07ac72-1758-44d8-dfd3-e23bf265361e"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,13 +506,133 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Day 05, input"
+      ],
+      "metadata": {
+        "id": "T-GlIeI_yH0R"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "input05 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input05.txt')]\n",
+        "split_index = input05.index('')\n",
+        "rules = [tuple(int(x) for x in rule.split('|')) for rule in input05[:split_index]]\n",
+        "updates = [[int(x) for x in update.split(',')] for update in input05[split_index+1:]]"
+      ],
       "metadata": {
         "id": "G_ynPO_i05nv"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 05, utils\n"
+      ],
+      "metadata": {
+        "id": "21yWpqLA1uXG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def verify_pair(first, second):\n",
+        "  existing_rules = [rule for rule in rules if first in rule and second in rule]\n",
+        "  return not existing_rules or any(rule[0] == first and rule[1] == second for rule in existing_rules)\n",
+        "\n",
+        "def verify_update(update):\n",
+        "  return all(verify_pair(update[i], update[j]) for i in range(len(update)-1) for j in range(i+1, len(update)))"
+      ],
+      "metadata": {
+        "id": "3Ze94NW_zPJo"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 05, part 1, find correct updates"
+      ],
+      "metadata": {
+        "id": "8lU7RtCR7Pbd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(update[int(len(update)/2)] for update in updates if verify_update(update))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qWoawq4o4l6v",
+        "outputId": "f061eace-1607-4a6a-b7ee-cb6fc2f90cd3"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7365"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 05, part 2, fix updates which break the rules"
+      ],
+      "metadata": {
+        "id": "xlrgyrB7-6T_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fix_update(update_rest, fixed):\n",
+        "  if not update_rest:\n",
+        "    return fixed\n",
+        "  if not fixed:\n",
+        "    return fix_update(update_rest[1:], [update_rest[0]])\n",
+        "  # find correct place for update_rest[0] in fixed\n",
+        "  for i in range(len(fixed)):\n",
+        "    if verify_pair(update_rest[0], fixed[i]):\n",
+        "      return fix_update(update_rest[1:], fixed[:i] + [update_rest[0]] + fixed[i:])\n",
+        "  return fix_update(update_rest[1:], fixed + [update_rest[0]])\n",
+        "\n",
+        "sum(fix_update(update, [])[int(len(update)/2)] for update in updates if not verify_update(update))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e3hdrfwD-5uA",
+        "outputId": "6b613d96-6018-487d-c1b7-118e4b7daf62"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5770"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     }
   ]
 }
