--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyMO9tpG/gtHiiUa83wzPRWU",
+      "authorship_tag": "ABX9TyM+lHinG1qoWlDaxAfw511I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Day 02, part 1, part 1, determine (all increasing or all decreasing) and deltas < 4"
+        "Day 02, utils"
       ],
       "metadata": {
         "id": "mvPBjJnKIIBp"
@@ -162,6 +162,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 02, part 1, part 1, determine (all increasing or all decreasing) and deltas < 4"
+      ],
+      "metadata": {
+        "id": "CDo_j_XGl44_"
+      }
     },
     {
       "cell_type": "code",
@@ -448,7 +457,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Day 05, part 2, find\n",
+        "Day 04, part 2, find\n",
         "```\n",
         "M.S\n",
         ".A.\n",
@@ -525,7 +534,7 @@
       "metadata": {
         "id": "G_ynPO_i05nv"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -550,7 +559,7 @@
       "metadata": {
         "id": "3Ze94NW_zPJo"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -574,7 +583,7 @@
         "id": "qWoawq4o4l6v",
         "outputId": "f061eace-1607-4a6a-b7ee-cb6fc2f90cd3"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +629,7 @@
         "id": "e3hdrfwD-5uA",
         "outputId": "6b613d96-6018-487d-c1b7-118e4b7daf62"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
