--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1bI3B0pabhjbdGYFUFznIHTbkYHhlnPKN",
-      "authorship_tag": "ABX9TyM+lHinG1qoWlDaxAfw511I",
+      "authorship_tag": "ABX9TyNqM30BjR+wfxkpO8ZUVo6h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -166,7 +166,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Day 02, part 1, part 1, determine (all increasing or all decreasing) and deltas < 4"
+        "Day 02, part 1, determine (all increasing or all decreasing) and deltas < 4"
       ],
       "metadata": {
         "id": "CDo_j_XGl44_"
